# DonnaAI

./: .env.example  .gitignore  OPENCLAW_INTEGRATION_LOG.md  README.md  docker-compose.gcp.yml  docker-compose.yml  test.ipynb
backend/: .env.example  Dockerfile  classify_pending.py  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20260227_0001_create_users_and_connected_accounts.py  20260318_0002_create_emails_table.py  20260318_0003_add_search_vector.py  20260328_0004_add_email_review_fields.py  20260331_0005_create_email_sync_jobs.py  20260402_0006_scope_modules_foundation.py  20260409_0007_chat_ingestion_foundation.py  20260409_0008_sports_tracking_foundation.py  f8de8784e5a2_widen_email_text_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: ai.py  calendar.py  connected_accounts.py  dependencies.py  emails.py  inbox.py  news.py  notifications.py  oauth.py  router.py  routes.py  slack.py  slack_auth.py  sports.py  spotify.py  spotify_auth.py  teams.py  teams_auth.py  voice.py  webhooks.py  whatsapp.py  whatsapp_auth.py
backend/tests/: conftest.py  test_ai_api.py  test_auth_api.py  test_calendar_api.py  test_chat_persistence_api.py  test_connected_accounts_api.py  test_emails_api.py  test_health.py  test_inbox_api.py  test_models.py  test_news_api.py  test_notifications_api.py  test_oauth_api.py  test_slack_api.py  test_sports_api.py  test_spotify_api.py  test_spotify_oauth_api.py  test_teams_api.py  test_users_api.py  test_voice_api.py  test_webhooks_chat_ingestion.py  test_whatsapp_api.py
(+149 files in other folders)
